RELEASE (version 2.0)

Changes in version 1.99.2 (2015-03-21)

	o Provided vignette that allows R CMD CHECK --no-build-vignettes in <5 min
	o Fixed minor bug affecting runs in which not all samples are analyzed by CopywriteR function
	o Included a test for sorting of .bam files
	o Improved error messages
	o Fixed minor bug affecting plotting of samples
	o Fixed minor bug causing error when processing >100 samples simultaneously

-------------------------------------

Changes in version 1.99.0 (2015-03-05)

	o Released new version
	o Improved the speed of the package
	o Implemented logging with the futile.logger package
	o Replaced direct slot or field access with the use of accessor functions
	o Implemented text wrapping
	o Replaced the use of bed-file format with GRanges objects
	o Created annotation and experiment packages
	o Addressed all NOTES upon R CMD CHECK
	o Restore options upon exit
	o Adjusted version numbering to 1.99.0
	o Implemented BiocParallel for parallel computing
	o Changed name from ENCODER to CopywriteR
	o Shortened lines to 80 characters
	o Added NEWS file
	o Changed F to FALSE
	o Changed T to TRUE
	o Added biocViews
	o Changed version to 0.99.0