@@ -299,12 +299,11 @@ The CopywriteR tool has been cited and referenced by:
 
 ## Changes and additions we are currently working on
 
-- [ ] Address the NA in counting reads of vignette
-- [ ] Remove warning messages small bams _chr
-- [ ] Address warning message in analysis RB1705
 - [ ] Remove blacklisted regions by excluding regions and not excluding bins
 - [ ] Change CopywriteR to allow custom bins?
 - [ ] Compile into bioConductor package
+- [x] Fixed minor bug affecting read count statistics on single-sample analysis
+- [x] Remove warning messages small bams _chr (implemented in source code)
 - [x] Fixed a minor bug affecting analysis of >100 simultaneous samples (implemented in source code)
 - [x] Change plotCNA (double line in plots of RB1705) (implemented in source code)
 - [x] Improve error message in plotCNA when CopywriteR analysis is missing for some samples (implemented in source code)
