@@ -8,6 +8,8 @@ Changes in version 1.99.2 (2015-03-21)
 	o Improved error messages
 	o Fixed minor bug affecting plotting of samples
 	o Fixed minor bug causing error when processing >100 samples simultaneously
+	o Added support for capture regions bed files lacking the correct chromosome name prefix
+	o Fixed minor bug affecting read count statistics on single-sample analysis
 
 -------------------------------------
 
